--- a/emplacement-backend-api/Dockerfile
+++ b/emplacement-backend-api/Dockerfile
@@ -1,3 +1,3 @@
 FROM eclipse-temurin:17-jdk-alpine
-COPY target/emplacement.jar app.jar
+COPY build/emplacement.jar app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
