--- a/emplacement-backend-api/.gitignore
+++ b/emplacement-backend-api/.gitignore
@@ -1,8 +1,5 @@
 HELP.md
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+**/target/*/
 
 ### STS ###
 .apt_generated
@@ -23,7 +20,9 @@ target/
 /nbproject/private/
 /nbbuild/
 /dist/
+/build
 /nbdist/
+/target
 /.nb-gradle/
 !**/src/main/**/build/
 !**/src/test/**/build/
