--- a/emplacement-backend-api/Dockerfile
+++ b/emplacement-backend-api/Dockerfile
@@ -1,3 +1,17 @@
-FROM eclipse-temurin:17-jdk-alpine
-COPY build/emplacement.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+# # # #
+#
+#   BUILD STAGE
+#
+
+FROM maven:3.8.1-openjdk-17-slim AS build
+COPY src /home/app/src
+COPY pom.xml /home/app
+RUN mvn -f /home/app/pom.xml clean package
+
+
+#
+# Package stage
+#
+FROM openjdk:17.0.1-jdk-slim
+COPY --from=build /home/app/target/emplacement.jar /usr/local/lib/emplacement.jar
+ENTRYPOINT ["java","-jar","/usr/local/lib/emplacement.jar"]
