--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,11 +1,19 @@
-FROM node:18-alpine
+FROM node:18-alpine AS build
 
-WORKDIR /react-vite-app
+WORKDIR /app
 
-COPY package.json package-lock.json ./
+COPY . .
 
 RUN npm install
 
-COPY . ./
+RUN npm run build
 
-CMD ["npm", "run", "dev"]
+
+### PRODUCTION
+
+FROM nginx:stable-alpine
+COPY --from=build /app/dist /usr/share/nginx/html
+COPY --from=build /app/nginx/nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
+
