--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.8.0",
+    "react-loading-skeleton": "^3.2.0",
     "react-router-dom": "^6.10.0",
     "sort-by": "^1.2.0"
   },
