--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,13 @@ services:
       - 8080:8080
     depends_on:
       - frontend
+  bot:
+    build : ./telegram-bot
+    environment:
+      - BOT_TOKEN=${BOT_TOKEN}
+    depends_on:
+      - frontend
+      - backend
   frontend:
     build: ./client
     ports:
