--- a/telegram-bot/pom.xml
+++ b/telegram-bot/pom.xml
@@ -81,6 +81,11 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+        <plugin>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-maven-plugin</artifactId>
+          
+        </plugin>
       </plugins>
     </pluginManagement>
     <finalName>bot</finalName>
