--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     build : ./telegrambot
     environment:
       - BOT_TOKEN=${BOT_TOKEN}
+      - CUVETTE_TOKEN=${CUVETTE_TOKEN}
   backend:
     build: ./emplacement-backend-api
     ports:
