--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,12 @@ services:
     build : ./telegrambot
     environment:
       - BOT_TOKEN=${BOT_TOKEN}
-      - CUVETTE_TOKEN=${CUVETTE_TOKEN}
   backend:
     build: ./emplacement-backend-api
     ports:
       - 8080:8080
+    environment:
+      - CUVETTE_TOKEN=${CUVETTE_TOKEN}
     depends_on:
       - bot
       - frontend
